# snowflakecli

./: .gitignore  .pdm-python  README.md  pyproject.toml  sample.config
scratch/: memo.md  sample.py
src/app/: account.py  database.py  main.py  scrape.py  warehouse.py
src/cli/: account.py  ask.py  configure.py  connection.py  database.py  debug.py  io.py  keypair.py  main.py  recommend.py  scrape.py  security.py  sql.py  warehouse.py
src/cli/core/: constants.py  fs.py  logging.py
src/cli/core/config/: parser.py  sfcli.py
src/cli/core/security/: audit.py  hunt.py  playbooks.py  runner.py  types.py
src/cli/core/security/hunt_definitions/: snowflake_unc5537_breach.py
src/cli/core/security/playbooks/: benchmarks.py  cis_controls.py  unc5537_breach.py
src/cli/core/snowflake/: connection.py  query.py  sql.py
src/cli/core/util/: key.py
src/core/: config.py  constants.py  fs.py  logging.py
src/core/config/: parser.py  sfcli.py
src/core/snowflake/: connection.py  sql.py
src/core/util/: key.py  time.py
src/snowflakecli/cli/: account.py  ask.py  main.py  recommend.py  security.py
