[project]
name = "snowflakecli"
version = "0.3.9"
description = "A DuckDB and DataFusion-powered, AI-augmented command line interface for Snowflake security, optimization, management, and operations."
authors = [{ name = "jake", email = "jake@bostata.com" }]
dependencies = [
    "duckdb>=1.0.0",
    "snowflake-connector-python>=3.11.0",
    "typer>=0.12.3",
    "datafusion>=38.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
snowflakecli = "snowflakecli.cli.main:main"
sfcli = "snowflakecli.cli.main:main"
sf = "snowflakecli.cli.main:main"

[tool.pdm]
distribution = true
